database created with schema

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
-#
-# application.yml — главный конфигурационный файл Spring Boot.
-
-Что нужно сделать:
-  - Указать настройки подключения к базе данных.
-  - Указать порт приложения.
-  - Настроить параметры безопасности и JWT.
-  - Включить Swagger UI.
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5000/bank_db
+    username: bank_user
+    password: bank_pass
+  liquibase:
+    change-log: classpath:db/migration/changelog-master.xml
+  jpa:
+    hibernate:
+      ddl-auto: validate
